# ChloroFile

./: .gitignore  CMakeLists.txt  README.md  a.txt  b.txt  build.sh  c.cpp  c.txt  clean.sh  client.h  configure.sh  connection.h  general.h  main.cpp  net_queue.h  queue.h  rebuild.sh  run.sh  s.cpp  server.h  serverMain.cpp
website/: connect.php  index.html  ipaddress.html  login.html  policy.html  run.js  shop.html  shop.js  styles.css
